# test-scrapping-crawl4ai

projet-scrapping-docker/: .env  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.chatbot  Dockerfile.vector  LICENSE  README.md  README_CHATBOT.md  app.py  chatbot.py  content_scraper.py  crawl_site.py  docker-compose.chatbot.yml  docker-compose.complete.yml  docker-compose.vector.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_vector.txt  run-docker.sh  run_content_scraper.py  run_scraper.py  scrape_new_site.py  setup.py  sitemap_extractor.py  sitemap_tree.py  sites_example.txt  test_crawl4ai.py  test_extract_urls.py  vector_store.py  vectorize_content.py  volfoni_urls.json
projet-scrapping-docker/.github/workflows/: ci.yml  release.yml
projet-scrapping-docker/crawl4ai_test_results/: content.html  content.md
projet-scrapping-docker/docker/: Dockerfile  Dockerfile.chatbot  Dockerfile.vector
projet-scrapping-docker/docs/: FAQ.md  INSTALLATION.md  README_DOCKER.md  USAGE.md
projet-scrapping-docker/scraped_content_md/: chaletdulac-paris_com.md  dentego_fr.md  index.md  kani-restaurant_com.md  phood_fr.md  www_aquarestaurant_fr.md  www_artdentclinic_fr.md  www_bainsdumarais_fr.md  www_carrefour_fr.md  www_doctolib_fr.md  www_mcdonalds_fr.md  www_popelini_com.md  www_volfoni_fr.md
projet-scrapping-docker/scraped_links/: chaletdulac-paris_com_stats.json  kani-restaurant_com_stats.json  phood_fr_stats.json  sitemap_summary.json  www_aquarestaurant_fr_stats.json  www_artdentclinic_fr_stats.json  www_bainsdumarais_fr_stats.json  www_doctolib_fr_stats.json  www_mcdonalds_fr_stats.json  www_popelini_com_stats.json  www_volfoni_fr_stats.json
projet-scrapping-docker/scraped_links/chaletdulac-paris_com/: chaletdulac-paris_com_content.md  chaletdulac-paris_com_urls.txt  index.json  sitemap_urls.json
projet-scrapping-docker/scraped_links/dentego_fr/: sitemap_urls.json
projet-scrapping-docker/scraped_links/kani-restaurant_com/: index.json  kani-restaurant_com_content.md  kani-restaurant_com_urls.txt  sitemap_urls.json
projet-scrapping-docker/scraped_links/phood_fr/: index.json  phood_fr_content.md  phood_fr_urls.txt  sitemap_urls.json
projet-scrapping-docker/scraped_links/www_aquarestaurant_fr/: index.json  sitemap_urls.json  www_aquarestaurant_fr_content.md  www_aquarestaurant_fr_urls.txt
projet-scrapping-docker/scraped_links/www_artdentclinic_fr/: index.json  sitemap_urls.json  www_artdentclinic_fr_content.md  www_artdentclinic_fr_urls.txt
projet-scrapping-docker/scraped_links/www_bainsdumarais_fr/: index.json  sitemap_urls.json  www_bainsdumarais_fr_content.md  www_bainsdumarais_fr_urls.txt
projet-scrapping-docker/scraped_links/www_carrefour_fr/: sitemap_urls.json
projet-scrapping-docker/scraped_links/www_doctolib_fr/: index.json  sitemap_urls.json  www_doctolib_fr_content.md  www_doctolib_fr_urls.txt
projet-scrapping-docker/scraped_links/www_mcdonalds_fr/: index.json  sitemap_urls.json  www_mcdonalds_fr_content.md  www_mcdonalds_fr_urls.txt
projet-scrapping-docker/scraped_links/www_popelini_com/: index.json  sitemap_urls.json  www_popelini_com_content.md  www_popelini_com_urls.txt
projet-scrapping-docker/scraped_links/www_volfoni_fr/: index.json  sitemap_urls.json  www_volfoni_fr_urls.txt
projet-scrapping-docker/scripts/: init-github.bat  init-github.sh  run-docker.bat  test-project.bat  test-project.sh  validate-structure.bat  validate-structure.sh
projet-scrapping-docker/src/: scrape_one_site.py  sitemap_extractor_simple.py  test_chatbot.py
projet-scrapping-docker/tests/: conftest.py  test_vector_store.py
